# student-lms

./: LICENSE
backend/: CMakeLists.txt  config.json  main.cc
backend/controllers/: AssignmentController.cc  AssignmentController.h  CourseController.cc  CourseController.h  DbController.cc  DbController.h  HealthController.cc  HealthController.h  SyncController.cc  SyncController.h  UserController.cc  UserController.h
backend/db/: Database.cc  Database.h
backend/services/: CanvasService.cc  CanvasService.h  NotificationService.cc  NotificationService.h
models/: Assignment.cpp  Assignment.h  Course.cpp  Course.h  Enrollment.cpp  Enrollment.h  User.cpp  User.h
